# cap

./: .gitignore  Cargo.toml  README.md  test_qwen_vl.rs  test_token_savings.rs  todos.md
.github/instructions/: todos.md.instructions.md
cap-rtsp/: Cargo.toml  README.md
cap-rtsp-demo/: Cargo.toml
cap-rtsp-demo/src/: main.rs
cap-rtsp/src/: lib.rs
cap-scale/: Cargo.toml  README.md
cap-scale/examples/: gundam_demo.rs
cap-scale/src/: cpu.rs  gundam.rs  lib.rs  presets.rs
cap_scale/: Cargo.toml  README_CAP_SCALE.md
cap_scale/examples/: gundam_demo.rs
cap_scale/src/: cpu.rs  gundam.rs  lib.rs  presets.rs
desktop-app/: Cargo.toml
desktop-app/src/: main.rs
docs/: modularized-gundam-architecture.md  pipeline-architecture.md
examples/cap-rtsp-demo/: Cargo.toml  README.md
examples/cap-rtsp-demo/src/: main.rs
examples/desktop-app/: Cargo.toml  README.md
examples/desktop-app/src/: main.rs
src/: benchmark.rs  config.rs  error.rs  lib.rs  main.rs  main.rs.README.md  processing.rs.README.md  scrap.rs  session.rs  session.rs.README.md  wayland.rs
src/capture/: mod.rs  scrap.rs  session_sources.rs  wayland.rs
src/config/: config.rs  mod.rs  session.rs
src/core/: buffer_pool.rs  mod.rs  performance_analysis.rs  ring_buffer.rs
src/processing/: mod.rs  processing.rs
tests/: README.md  test_egui_session_integration.rs  test_token_savings.rs
tests/common/: mod.rs
tests/e2e/: mod.rs
tests/e2e/gui/: mod.rs  test_egui_session_integration.rs
tests/integration/: mod.rs
tests/integration/cli/: test_session_based_capture.rs
tests/integration/pipeline/: mod.rs  test_gundam_integration.rs  test_scaling_integration.rs.disabled
tests/integration/session/: mod.rs  test_error_recovery.rs  test_graceful_shutdown.rs  test_gundam_processor_integration.rs  test_scaling_processor_integration.rs  test_session_capture_cli.rs
tests/unit/: mod.rs
tests/unit/processing/: mod.rs  test_gundam_processor.rs  test_scaling_processor.rs
