[workspace]
members = [
    ".",
    "cap_scale",
    "cap-rtsp",
    "cap-rtsp-demo",
    "desktop-app"
]
resolver = "2"

[package]
name = "hybrid_screen_capture"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "hybrid_screen_capture"
path = "src/lib.rs"

[[bin]]
name = "cap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
scrap = { version = "0.5", optional = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"], optional = true }
memmap2 = "0.9"
tempfile = "3.8"
cap_scale = { path = "./cap_scale" }
fast_image_resize = { version = "5", features = ["rayon"] }
cap-rtsp = { path = "./cap-rtsp", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread"], optional = true }
ashpd = { version = "0.12", optional = true }
gstreamer = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }
x11rb = { version = "0.13", features = ["image"], optional = true }

[[bin]]
name = "check_deps"
path = "src/bin/check_deps.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "test_qwen_vl"
path = "test_qwen_vl.rs"

[features]
# Screen capture functionality. Enabled by default but disabled for WASM.
default = ["screen-capture", "wayland-pipe"]
screen-capture = ["scrap", "dep:tokio"]
# Wayland pipeline via ashpd + GStreamer. Enabled by default.
wayland-pipe = ["ashpd", "gstreamer", "gstreamer-video"]
# RTSP streaming functionality
rtsp-streaming = ["cap-rtsp", "x11rb"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Disable screen capture for WASM targets since browsers can't capture screens
