[workspace]
members = [
    ".",
    "cap-scale",
    "cap-rtsp",
    "examples/cap-rtsp-demo",
    "examples/desktop-app"
]
resolver = "2"

[package]
name = "hybrid_screen_capture"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "hybrid_screen_capture"
path = "src/lib.rs"

[[bin]]
name = "cap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
scrap = { version = "0.5", optional = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"], optional = true }
memmap2 = "0.9"
tempfile = "3.8"
cap-scale = { path = "./cap-scale" }
cap-rtsp = { path = "./cap-rtsp", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
base64 = "0.22"
image = "0.25"
fast_image_resize = "5.0"
async-trait = "0.1"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread"], optional = true }
ashpd = { version = "0.12", optional = true }
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }
x11rb = { version = "0.13", features = ["image"], optional = true }

[[bin]]
name = "check_deps"
path = "tools/bin/check_deps.rs"

[[bin]]
name = "benchmark"
path = "tools/bin/benchmark.rs"

[[bin]]
name = "test_qwen_vl"
path = "tests/test_qwen_vl.rs"

[[bin]]
name = "test_token_savings"
path = "tests/test_token_savings.rs"

[features]
# Screen capture functionality. Enabled by default but disabled for WASM.
default = ["screen-capture", "wayland-pipe"]
screen-capture = ["scrap", "dep:tokio"]
# Wayland pipeline via ashpd + GStreamer. Enabled by default.
wayland-pipe = ["ashpd", "gstreamer", "gstreamer-video"]
# RTSP streaming functionality
rtsp-streaming = ["cap-rtsp", "x11rb", "gstreamer", "gstreamer-app", "gstreamer-video"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Disable screen capture for WASM targets since browsers can't capture screens
