[package]
name = "cap-rtsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RTSP server (GStreamer) for cap: feed BGRA frames and stream H.264 over /cap"

[dependencies]
anyhow = "1"
async-trait = "0.1"
crossbeam-channel = "0.5"
once_cell = "1"

# GStreamer Rust bindings (0.24 series)
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"
gstreamer-rtsp-server = "0.24"
glib = "0.19"