[package]
name = "desktop-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "desktop-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
hybrid_screen_capture = { path = "../", default-features = false, features = ["screen-capture"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
async-channel = "2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"] }
