[package]
name = "desktop-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "desktop-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
hybrid_screen_capture = { path = "../", default-features = false, features = ["screen-capture"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
async-channel = "2.3"
